# django-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint-local.sh  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  env_reader.py  urls.py  wsgi.py
config/settings/: common.py  development.py  production.py
example_app/management/commands/: test_command.py
example_app/tasks/: clean_logs.py  heartbeat.py
setup/: README.md  gunicorn_start.sh  local_start_app.sh
setup/macos_setup/: install_components.sh  start_services.sh
setup/supervisor/: gunicorn.conf
setup/ubuntu_setup/: install_components.sh  setup_db.sh  start_redis.sh
