[tool.poetry]
name = "django-project-template"
version = "0.1.0"
description = ""
authors = ["Anastasiia Savchyn <sa@empat.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = {extras = ["bcrypt"], version = "^5.1.4"}
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.6.0"
whitenoise = "^6.8.2"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"
drf-spectacular = "^0.28.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
django-storages = "^1.14.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
autoflake = "^2.3.1"


[tool.poetry.group.setup.dependencies]
gunicorn = "^23.0.0"
gevent = "^24.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
